--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 }
 
 dependencies {
+    compile 'org.projectlombok:lombok:1.16.20'
+    compile 'com.google.guava:guava:24.1-jre'
+
     testCompile 'junit:junit:4.12'
     testCompile 'org.springframework.boot:spring-boot:1.3.5.RELEASE'
 }
